# AshenEngine

./: CMakeLists.txt  README.md  vcpkg.json
AshenEngine/: CMakeLists.txt
AshenEngine/include/: Ashen.h
AshenEngine/include/Ashen/: Ashen.h
AshenEngine/include/Ashen/Animation/: Animation.h  AnimationClip.h  AnimationTrack.h  AnimationTypes.h  Animator.h
AshenEngine/include/Ashen/Audio/: AudioDevice.h  AudioManager.h  AudioSource.h  AudioTypes.h
AshenEngine/include/Ashen/BuiltIn/: BuiltInShader.h
AshenEngine/include/Ashen/Config/: IConfig.h  JsonConfig.h
AshenEngine/include/Ashen/Core/: Application.h  Codes.h  Color.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Logger.h  Platform.h  Types.h  UID.h  UUID.h  Window.h
AshenEngine/include/Ashen/ECS/: Component.h  Entity.h  Scene.h  SceneLayer.h  ScriptableEntity.h
AshenEngine/include/Ashen/Events/: ApplicationEvent.h  Event.h  EventBus.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
AshenEngine/include/Ashen/Graphics/: Frustum.h  Viewport.h
AshenEngine/include/Ashen/GraphicsAPI/: Buffer.h  FrameBuffer.h  GLEnums.h  GLObject.h  GLUtils.h  GraphicsContext.h  RenderCommand.h  RenderContext.h  RenderState.h  RenderTarget.h  RendererAPI.h  Shader.h  Texture.h  TextureAtlas.h  VertexArray.h  Viewport.h
AshenEngine/include/Ashen/ImGui/: ImGuiLayer.h  InspectorPanel.h  PerformanceMonitorPanel.h  SceneHierarchyPanel.h
AshenEngine/include/Ashen/Math/: BBox.h  BoundingBox.h  Math.h  Random.h  Transform.h
AshenEngine/include/Ashen/Nodes/: CanvasItem.h  Containers.h  Control.h  Node.h  Node2D.h  Node3D.h  NodeGraph.h  Widgets.h
AshenEngine/include/Ashen/Particles/: ParticleRenderer.h  ParticleSystem.h  ParticleTypes.h  Particles.h
AshenEngine/include/Ashen/Physics/: BoxCollider.h  CapsuleCollider.h  Collider.h  Physics.h  PhysicsMaterial.h  PhysicsTypes.h  PhysicsWorld.h  Rigidbody.h  SphereCollider.h
AshenEngine/include/Ashen/Resources/: ResourceManager.h
AshenEngine/include/Ashen/Scene/: Component.h  Control.h  Node.h  Property.h  Scene.h  SceneSerializer.h  SceneTree.h
AshenEngine/include/Ashen/UI/: BoxContainer.h  Button.h  Label.h  Panel.h  UI.h  Widget.h
AshenEngine/include/Ashen/Utils/: FileSystem.h  FileWatcher.h  ImageLoader.h  Profiler.h  Utilities.h
AshenEngine/include/Ashen/core/: Application.h  Color.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Logger.h  MouseCodes.h  Platform.h  Types.h  Window.h
AshenEngine/include/Ashen/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
AshenEngine/include/Ashen/math/: AABB.h  BoundingBox.h  Math.h
AshenEngine/include/Ashen/renderer/: Bindable.h  Camera.h  GLObject.h  GLUtils.h  RenderCommand.h  Renderer.h  Renderer2D.h  Renderer3D.h
AshenEngine/include/Ashen/resources/: ResourceManager.h  ResourceSystem.h
AshenEngine/include/Ashen/utils/: FileSystem.h  ImageLoader.h  utils.h
AshenEngine/src/Animation/: AnimationClip.cpp  Animator.cpp
AshenEngine/src/Audio/: AudioManager.cpp
AshenEngine/src/Audio/MiniAudio/: MiniAudioDevice.cpp  MiniAudioSource.cpp
AshenEngine/src/Audio/MiniAudioImpl/: MiniAudioDevice.cpp  MiniAudioSource.cpp
AshenEngine/src/BuiltIn/: BuiltInShader.cpp
AshenEngine/src/Core/: Application.cpp  Input.cpp  LayerStack.cpp  Platform.cpp  UUID.cpp  Window.cpp
AshenEngine/src/ECS/: Entity.cpp  Scene.cpp
AshenEngine/src/Graphics/: Frustum.cpp
AshenEngine/src/Graphics/Camera/: Camera.cpp  Camera2DController.cpp  FPSCameraController.cpp  Frustum.cpp  OrbitCameraController.cpp
AshenEngine/src/Graphics/CameraControllers/: Camera2DController.cpp  (+2 more)
AshenEngine/src/GraphicsAPI/: GLUtils.cpp  GraphicsContext.cpp  RenderCommand.cpp  RenderContext.cpp  RenderState.cpp  RendererAPI.cpp
AshenEngine/src/ImGui/: ImGuiLayer.cpp  InspectorPanel.cpp  PerformanceMonitorPanel.cpp  SceneHierarchyPanel.cpp
AshenEngine/src/Math/: Transform.cpp
AshenEngine/src/Nodes/: CanvasItem.cpp  Containers.cpp  Control.cpp  Node.cpp  Node2D.cpp  Node3D.cpp  NodeGraph.cpp  Widgets.cpp
AshenEngine/src/Particles/: ParticleRenderer.cpp  ParticleSystem.cpp
AshenEngine/src/Physics/: BoxCollider.cpp  CapsuleCollider.cpp  Collider.cpp  PhysicsMaterial.cpp  PhysicsWorld.cpp  Rigidbody.cpp  SphereCollider.cpp
AshenEngine/src/Resources/: ResourceManager.cpp
AshenEngine/src/Scene/: Control.cpp  Node.cpp  SceneSerializer.cpp  SceneTree.cpp
AshenEngine/src/UI/: BoxContainer.cpp  Button.cpp  Label.cpp  Panel.cpp
AshenEngine/src/Utils/: FileSystem.cpp  ImageLoader.cpp  Profiler.cpp
AshenEngine/src/core/: Application.cpp  Input.cpp  LayerStack.cpp  Platform.cpp  Window.cpp
AshenEngine/src/renderer/: GLUtils.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp
AshenEngine/src/resources/: ResourceManager.cpp
AshenEngine/src/utils/: FileSystem.cpp  ImageLoader.cpp
Editor/: CMakeLists.txt
Editor/include/: EditorActions.h  EditorLayer.h  EditorSelection.h  ImGUIContext.h
Editor/src/: EditorApp.cpp  EditorLayer.cpp  EditorSelection.cpp  ImGUIContext.cpp
Testbed/: CMakeLists.txt
Testbed/include/: TestbedApp.h
Testbed/include/layers/: FeaturesDemoLayer.h  GameLayer.h  ImGuiDemoLayer.h  NodeGraphTestLayer.h  PhysicsDemoLayer.h  Renderer2DTestLayer.h  SceneTestLayer.h  TestLayer.h  UILayer.h
Testbed/resources/: pbr.frag  pbr.vert
Testbed/resources/plant/: plant.mtl
Testbed/src/: TestbedApp.cpp
Testbed/src/layers/: FeaturesDemoLayer.cpp  GameLayer.cpp  ImGuiDemoLayer.cpp  NodeGraphTestLayer.cpp  PhysicsDemoLayer.cpp  Renderer2DTestLayer.cpp  SceneTestLayer.cpp  TestLayer.cpp  UILayer.cpp
Voxelity/: CMakeLists.txt
Voxelity/include/Voxelity/: VoxelityApp.h
Voxelity/resources/shaders/: chunk.frag  chunk.vert  mountain_skybox.frag  mountain_skybox.vert
Voxelity/src/: VoxelityApp.cpp
Voxelity/src/entities/: EntityManager.cpp  FallingBlockEntity.cpp  Player.cpp
Voxelity/src/input/: InputHandler.cpp
Voxelity/src/layers/: DebugLayer.cpp  UILayer.cpp  VoxelWorldLayer.cpp
Voxelity/src/player/: PlayerController.cpp
Voxelity/src/systems/: PhysicsSystem.cpp
(+106 files in other folders)
